--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jquery": "^3.3.1"
   },
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "gulp-heroku-deploy-slug": "^0.1.0"
   }
 }
